--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    document.write("hello world");
+    <br>
+    console.log("hello world");
 </body>
 </html>
