--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    document.write("hello world");
-    <br>
-    console.log("hello world");
+    <p id="demo"></p>
+    <script>
+    document.getElementById("demo").innerHTML="hello javascript";
+
+    
+    </script>
 </body>
 </html>
